// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DummyComponent render red option 1`] = `
<option>
  Red
</option>
`;

exports[`DummyComponent render red option 2`] = `
<option>
  Green
</option>
`;

exports[`DummyComponent render red option 3`] = `
<option>
  Blue
</option>
`;
